# capstone3

./: .env  .gitignore  IMPLEMENTATION.md  README.md  app.py  check.py  embedder.py  generate_pyproject.py  generate_resumes.py  main.py  pyproject.toml  requirements.txt  resumes_data.json  test_chatbot.py  utils.py
templates/: index.html
