[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capstone3"
version = "0.1.0"
description = "Resume advisor chatbot"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10.0,<=3.12.12"

dependencies = [
  # environment
  "python-dotenv>=1.0.0",

  # web app
  
  "streamlit>=1.20.0,<1.50.0",


  # data handling & utilities
  "pandas>=2.0.0",
  "tiktoken>=0.4.0",
  "requests>=2.28.0",

  # OpenAI & embeddings
  "openai>=0.27.0",
  "sentence-transformers>=2.2.2",

  # LangChain ecosystem (core + community integrations)
  "langchain>=0.0.300",
  "langchain-community>=0.0.10",
  "langchain-openai>=0.0.8",

  # LangGraph (used in main.py)
  "langgraph>=0.1.0",

  # Qdrant client and server interactions
  "qdrant-client>=1.7.0",

  # Text splitters (if you rely on the separate package)
  "langchain-text-splitters=0.0.10",

  # Optional plotting / debug
  "matplotlib>=3.7.0",
]
[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<=3.12.12"
langchain = "0.1.16"
langchain-core = "0.1.52"
langchain-community = "0.0.40"
langchain-text-splitters = ">=0.0.9"



[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=23.0.0",
  "ruff>=0.10.0"
]
ci = [
  "tox>=4.0.0"
]
